# project_games

./: .env.example  .gitignore  Doc1.docx  Makefile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
config/: default.yaml
data/: estadisticas_nulos.csv  games_complete.csv
data/processed/: games_complete.csv
notebooks/: 01_eda.ipynb
notebooks/legacy/: cleaning.ipynb
scripts/: analyze.py  preprocess.py
src/data/: dataset.py
src/project_games/: config.py
src/project_games/analysis/: genre.py  hypothesis.py  platform.py  regional.py  temporal.py
src/project_games/data/: cleaning.py  imputation.py  loader.py
src/project_games/visualization/: plots_matplotlib.py  plots_plotly.py
tests/: test_cleaning.py  test_imputation.py
